k8s/aws/receipts/mqtt-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: tb-broker-mqtt-loadbalancer
  namespace: thingsboard-mqtt-broker
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: stickiness.enabled=true,stickiness.type=source_ip
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: TBMQClusterELB=TBMQMqtt
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: tb-broker
  ports:
    - port: 1883
      targetPort: 1883
      name: mqtt
    # This way NLB acts as transparent load balancer and forwards all traffic to port 8883 without decryption.
    - port: 8883
      targetPort: 8883
      name: mqtts
