k8s/aws/receipts/mqtts-load-balancer.yml
#
# Copyright © 2016-2024 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  name: tb-broker-mqtts-loadbalancer
  namespace: thingsboard-mqtt-broker
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-attributes: load_balancing.cross_zone.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: stickiness.enabled=true,stickiness.type=source_ip
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: TBMQClusterELB=TBMQMqtt
    # Don't forget to replace YOUR_MQTTS_CERTIFICATE_ARN with the correct value
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: YOUR_MQTTS_CERTIFICATE_ARN
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "mqtts"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: tb-broker
  ports:
    - port: 1883
      targetPort: 1883
      name: mqtt
    - port: 8084
      targetPort: 8084
      name: mqtt-ws
    # This way NLB acts as an TLS termination point and forwards decrypted traffic to 1883 port of the TBMQ.
    - port: 8883
      targetPort: 1883
      name: mqtts
